--- a/server/package.json
+++ b/server/package.json
@@ -1,1 +1,12 @@
 
+{
+  "name": "weather-predictor-server",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.19.2",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.2"
+  }
+}
